Improved captions on a few images

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -152,7 +152,7 @@ Using the new methods outlined in Sections~\ref{sec:angle},~\ref{sec:light_dir},
 \begin{figure*}[h]
 	\centering
 	\includegraphics[width=5.5in]{images/hologram}
-	\caption{Hologram result}
+	\caption{A hologram-like result. Textures from the model are not used, and a noise texture is used. As the y-axis on the 2D Texture decreases, the amount of noise increases.}
 	\label{fig:hologram}
 \end{figure*}
 
@@ -180,21 +180,21 @@ Using the new methods outlined in Sections~\ref{sec:angle},~\ref{sec:light_dir},
 \begin{figure*}[h]
 	\centering
 	\includegraphics[width=5.5in]{images/stipple-hatch-result1}
-	\caption{Stipple/hatching result}
+	\caption{A stipple and hatching-like result of an ant. A noise 2D texture was used. Vertices closer to the camera were more noisy, while those further away were transparent. The gaster of the ant looks like it was done through hatching, while the rest of its body looks like it was done through stipppling.}
 	\label{fig:stippleHatch1}
 \end{figure*}
 
 \begin{figure*}[h]
 	\centering
 	\includegraphics[width=5.5in]{images/stipple-hatch-result2}
-	\caption{Stipple/hatching result}
+	\caption{A hatching-like result of an ant. A noise 2D texture was used. Vertices closer to the camera were more noisy, and looked more like hatches, while those further away were transparent.}
 	\label{fig:stippleHatch2}
 \end{figure*}
 
 \begin{figure*}[h]
   \centering
   \includegraphics[width=5.5in]{images/test}
-  \caption{Sample illustration}
+  \caption{Using a 2D texture from the original paper, we create a unique result by mixing the model's texture colors and the colors from the detail map.}
 \end{figure*}
 
 \begin{figure*}[h]
